--- a/bors.toml
+++ b/bors.toml
@@ -1,6 +1,7 @@
 status = [
   "test-os (ubuntu-latest)",
   "test-os (windows-latest)",
+  "test-os (macos-latest)",
   "ci/slurmci",
   "docs-build",
   "format"
