--- a/.github/workflows/OS-UnitTests.yml
+++ b/.github/workflows/OS-UnitTests.yml
@@ -19,8 +19,8 @@ jobs:
     # Workaround for OSX MPICH issue:
     # https://github.com/pmodels/mpich/issues/4710
     env:
-      MPICH_INTERFACE_HOSTNAME: localhost
-      JULIA_MPIEXEC_ARGS: "-hosts localhost"
+      MPICH_INTERFACE_HOSTNAME: "localhost"
+      CLIMATEMACHINE_TEST_RUNMPI_LOCALHOST: "true"
 
     steps:
     - name: Cancel Previous Runs
