Fix API update and add gcm benchmarks to Slurm CI

--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -58,6 +58,9 @@ gpu = [
   { file = "tutorials/Atmos/dry_rayleigh_benard.jl", slurmargs = ["--ntasks=1"], args = ["--fix-rng-seed"] },
   { file = "tutorials/Atmos/risingbubble.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "experiments/AtmosGCM/heldsuarez.jl", slurmargs = ["--ntasks=1"], args = ["--diagnostics=default", "--fix-rng-seed"] },
+  { file = "experiments/AtmosGCM/baroclinic-wave.jl", slurmargs = ["--ntasks=1"], args = [] },
+  { file = "experiments/AtmosGCM/nonhydrostatic-gravity-wave.jl", slurmargs = ["--ntasks=1"], args = [] },
+  { file = "experiments/AtmosGCM/isothermal-zonal-flow.jl", slurmargs = ["--ntasks=1"], args = [] },
   { file = "experiments/AtmosLES/surfacebubble.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "experiments/AtmosLES/dycoms.jl", slurmargs = ["--ntasks=3"], args = ["--fix-rng-seed"] },
   { file = "experiments/AtmosLES/bomex.jl", slurmargs = ["--ntasks=1"], args = ["--diagnostics=default", "--fix-rng-seed"] },
