--- a/slurmci-test.toml
+++ b/slurmci-test.toml
@@ -58,7 +58,7 @@ gpu = [
   { file = "tutorials/Atmos/dry_rayleigh_benard.jl", slurmargs = ["--ntasks=1"], args = ["--fix-rng-seed"] },
   { file = "tutorials/Atmos/risingbubble.jl", slurmargs = ["--ntasks=3"], args = [] },
   { file = "experiments/AtmosGCM/heldsuarez.jl", slurmargs = ["--ntasks=1"], args = ["--diagnostics=default", "--fix-rng-seed"] },
-  { file = "experiments/AtmosLES/surfacebubble.jl", slurmargs = ["--ntasks=3"], args = [] },
+  { file = "experiments/AtmosLES/surfacebubble.jl", slurmargs = ["--ntasks=3"], args = ["--monitor-memory-usage=1000steps", "--monitor-timestep-duration=1000steps"] },
   { file = "experiments/AtmosLES/dycoms.jl", slurmargs = ["--ntasks=3"], args = ["--fix-rng-seed"] },
   { file = "experiments/AtmosLES/bomex.jl", slurmargs = ["--ntasks=1"], args = ["--diagnostics=default", "--fix-rng-seed"] },
   { file = "experiments/AtmosLES/schar_scalar_advection.jl", slurmargs = ["--ntasks=1"], args = [] },
