--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -912,6 +912,16 @@ steps:
     agents:
       config: gpu
       queue: central
+      slurm_ntasks: 1  
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_bomex_bulk_sfc_flux" 
+    key: "gpu_bomex_bulk_sfc_flux"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_bulk_sfc_flux.jl --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
