Introduce `AbstractProblem` and `AtmosProblem`
To separate the specification of initial and boundary conditions
from the specification of the model. This is already done in the
Ocean code.

Also update all Atmos-related tests and experiments for use of
`AtmosProblem`.

Add documentation stubs.

Clean up `using` statements in some tests.

Export `courant` from `DGMethods`.

Merge bomex_bulk_sfc_flux.jl into bomex.jl -- add a command line option
(`--surface-flux=prescribed|bulk`).

Merge moist-baroclinic-wave.jl into baroclinic.wave.jl -- add a
command-line option (`--with-moisture`).

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -899,7 +899,7 @@ steps:
   - label: "gpu_bomex_bulk_sfc_flux" 
     key: "gpu_bomex_bulk_sfc_flux"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_bulk_sfc_flux.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex.jl --surface-flux=bulk --fix-rng-seed"
     agents:
       config: gpu
       queue: central
