fixing issues re: type stability and closures
switched to using Artifacts

issue with default theta ice

removed a file

fixed artifact file

modified slurm test file to run on GPU, small fixes

changed the way we get states after invoke, removed FT from init function

trying something

closure issue in init_soil_water

propagated chages to test_bc.jl for testing

fixed issue with getindex

formatting

fixed bug

fixing issues re: type stability and closures

switched to using Artifacts

issue with default theta ice

removed a file

fixed artifact file

modified slurm test file to run on GPU, small fixes

changed the way we get states after invoke, removed FT from init function

trying something

closure issue in init_soil_water

propagated chages to test_bc.jl for testing

fixed issue with getindex

formatting

fixed bug

modified pipeline.yml file, removed slurmci-test.toml

forgot to add pipeline file

added to CPU too

had duplicate CPU entries for land tests

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -111,24 +111,6 @@ steps:
       queue: central
       slurm_ntasks: 1
 
-  - label: "cpu_haverkamp_test"
-    key: "cpu_haverkamp_test"
-    command:
-      - "mpiexec julia --color=yes --project test/Land/Model/haverkamp_test.jl "
-    agents:
-      config: cpu
-      queue: central
-      slurm_ntasks: 1
-
-  - label: "cpu_test_bc"
-    key: "cpu_test_bc"
-    command:
-      - "mpiexec julia --color=yes --project test/Land/Model/test_bc.jl "
-    agents:
-      config: cpu
-      queue: central
-      slurm_ntasks: 1
-
   - label: "cpu_varsindex"
     key: "cpu_varsindex"
     command:
@@ -425,6 +407,24 @@ steps:
       config: cpu
       queue: central
       slurm_ntasks: 3
+
+  - label: "cpu_haverkamp_test"
+    key: "cpu_haverkamp_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/haverkamp_test.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_soil_test_bc"
+    key: "cpu_soil_test_bc"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/test_bc.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
 
   - label: "gpu_varsindex"
     key: "gpu_varsindex"
@@ -954,3 +954,24 @@ steps:
       queue: central
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
+
+  - label: "gpu_haverkamp_test"
+    key: "gpu_haverkamp_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/haverkamp_test.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_soil_test_bc"
+    key: "gpu_soil_test_bc"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/test_bc.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
