--- a/.buildkite/perf-pipeline.yml
+++ b/.buildkite/perf-pipeline.yml
@@ -6,12 +6,30 @@ steps:
   - label: "gpu_AtmosLES_dycoms"
     key: "gpu_AtmosLES_dycoms"
     command:
-      - "mpiexec nvprof --process-name \"MPI Rank %q{OMPI_COMM_WORLD_RANK}\" --context-name \"MPI Rank %q{OMPI_COMM_WORLD_RANK}\" -o timeline.%q{OMPI_COMM_WORLD_RANK}.nvprof julia --color=yes --project experiments/AtmosLES/dycoms.jl"
-    artifacts:
-    
+      - >
+        mpiexec nvprof
+        --process-name "MPI Rank %q{OMPI_COMM_WORLD_RANK}"
+        --context-name "MPI Rank %q{OMPI_COMM_WORLD_RANK}"
+        -o "%q{CI_OUTDIR}/gpu_AtmosLES_dycoms.%q{OMPI_COMM_WORLD_RANK}.nvprof"
+        julia --color=yes --project experiments/AtmosLES/dycoms.jl
     agents:
       config: gpu
       queue: central
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+
+  - label: "gpu_AtmosLES_bomex"
+    key: "gpu_AtmosLES_bomex"
+    command:
+      - >
+        mpiexec nvprof
+        --process-name "MPI Rank %q{OMPI_COMM_WORLD_RANK}"
+        --context-name "MPI Rank %q{OMPI_COMM_WORLD_RANK}"
+        -o "%q{CI_OUTDIR}/gpu_AtmosLES_bomex.%q{OMPI_COMM_WORLD_RANK}.nvprof"
+        julia --color=yes --project experiments/AtmosLES/bomex.jl
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
