--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -417,6 +417,15 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "cpu_heat_analytic_unit_test"
+    key: "cpu_heat_analytic_unit_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/heat_analytic_unit_test.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
   - label: "cpu_soil_test_bc"
     key: "cpu_soil_test_bc"
     command:
@@ -959,6 +968,16 @@ steps:
     key: "gpu_haverkamp_test"
     command:
       - "mpiexec julia --color=yes --project test/Land/Model/haverkamp_test.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_heat_analytic_unit_test"
+    key: "gpu_heat_analytic_unit_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/heat_analytic_unit_test.jl "
     agents:
       config: gpu
       queue: central
