--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -23,9 +23,10 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get -qq install libxt6 libxrender1 libxext6 libgl1-mesa-glx libqt5widgets5 xvfb
-      - uses: julia-actions/setup-julia@v1.1.6
+
+      - uses: julia-actions/setup-julia@latest
         with:
-          version: 1.4
+          version: 1.5
 
       # https://discourse.julialang.org/t/recommendation-cache-julia-artifacts-in-ci-services/35484
       - name: Cache artifacts
