--- a/.github/workflows/OS-UnitTests.yml
+++ b/.github/workflows/OS-UnitTests.yml
@@ -21,6 +21,7 @@ jobs:
     env:
       MPICH_INTERFACE_HOSTNAME: "localhost"
       CLIMATEMACHINE_TEST_RUNMPI_LOCALHOST: "true"
+      CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
 
     steps:
     - name: Cancel Previous Runs
@@ -48,7 +49,7 @@ jobs:
       uses: julia-actions/setup-julia@latest
       if: steps.filter.outputs.run_test == 'true'
       with:
-        version: 1.4
+        version: 1.5
 
     # https://discourse.julialang.org/t/recommendation-cache-julia-artifacts-in-ci-services/35484
     - name: Cache artifacts
