add GPU unittests to central cluster test pipeline

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -426,6 +426,15 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "cpu_discrete_hydrostatic_balance"
+    key: "cpu_discrete_hydrostatic_balance"
+    command:
+     - "mpiexec julia --color=yes --project test/Atmos/Model/discrete-hydrostatic-balance.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_soil_test_bc"
     key: "cpu_soil_test_bc"
     command:
@@ -912,7 +921,7 @@ steps:
     agents:
       config: gpu
       queue: central
-      slurm_ntasks: 1  
+      slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
   - label: "gpu_taylor_green"
@@ -925,7 +934,7 @@ steps:
       slurm_ntasks: 1  
       slurm_gres: "gpu:1"
 
-  - label: "gpu_bomex_bulk_sfc_flux" 
+  - label: "gpu_bomex_bulk_sfc_flux"
     key: "gpu_bomex_bulk_sfc_flux"
     command:
       - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex.jl --surface-flux=bulk --fix-rng-seed"
@@ -964,15 +973,6 @@ steps:
       queue: central
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
-
-  - label: "cpu_discrete_hydrostatic_balance"
-    key: "cpu_discrete_hydrostatic_balance"
-    command:
-     - "mpiexec julia --color=yes --project test/Atmos/Model/discrete-hydrostatic-balance.jl"
-    agents:
-      config: cpu
-      queue: central
-      slurm_ntasks: 3
 
   - label: "gpu_discrete_hydrostatic_balance"
     key: "gpu_discrete_hydrostatic_balance"
@@ -1014,3 +1014,12 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_unittests"
+    key: "gpu_unittests"
+    command:
+      - "julia --color=yes --project test/runtests_gpu.jl"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
