build docs on a slurm cluster node
update github workflow to not build tutorials only on pull request
update bors to use status of buildkite docs pipeline

--- a/bors.toml
+++ b/bors.toml
@@ -3,7 +3,7 @@ status = [
   "test-os (windows-latest)",
   "test-os (macos-latest)",
   "buildkite/climatemachine-ci",
-  "docs-build",
+  "buildkite/climatemachine-docs",
   "format"
 ]
 delete_merged_branches = true
