add simple box ivd test

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1003,6 +1003,16 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+  - label: "gpu_simple_box_ivd"
+    key: "gpu_simple_box_ivd"
+    command:
+      - "mpiexec julia --color=yes --project test/Ocean/SplitExplicit/simple_box_ivd.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
   - label: "gpu_discrete_hydrostatic_balance"
     key: "gpu_discrete_hydrostatic_balance"
     command:
