--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -953,6 +953,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_bomex_edmf"
+    key: "gpu_bomex_edmf"
+    command:
+      - "mpiexec julia --color=yes --project=docs/ test/Atmos/EDMF/bomex_edmf.jl --diagnostics=default --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_bomex_bulk_sfc_flux"
     key: "gpu_bomex_bulk_sfc_flux"
     command:
