--- a/.github/workflows/Linux-UnitTests.yml
+++ b/.github/workflows/Linux-UnitTests.yml
@@ -28,9 +28,9 @@ jobs:
       uses: actions/checkout@v2.2.0
 
     - name: Set up Julia
-      uses: julia-actions/setup-julia@v1.1.6
+      uses: julia-actions/setup-julia@latest
       with:
-        version: 1.4
+        version: 1.5
 
     # https://discourse.julialang.org/t/recommendation-cache-julia-artifacts-in-ci-services/35484
     - name: Cache artifacts
