remove reference to DataStructures, bump version requirement for DiffEqBase

--- a/Project.toml
+++ b/Project.toml
@@ -54,6 +54,7 @@ CUDA = "1.2"
 Combinatorics = "1.0"
 Coverage = "1.0"
 Dierckx = "0.4"
+DiffEqBase = "6.47"
 Distributions = "0.22, 0.23"
 DocStringExtensions = "0.8"
 DoubleFloats = "1.1"
