--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,31 +3,30 @@ env:
   CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
 
 steps:
-  - wait
-
-  - label: "Init CPU"
-    key: "cpu_init"
+  - label: "init cpu env"
+    key: "init_cpu_env"
     command:
       - "echo $JULIA_DEPOT_PATH"
       - "julia --project -e 'using Pkg; Pkg.instantiate(;verbose=True)'"
       - "julia --project -e 'using Pkg; Pkg.precompile()'"
       - "julia --project -e 'using Pkg; Pkg.status()'"
     agents:
-      config: cpu
+      config: cpu-test
       queue: central
       slurm_ntasks: 1
 
-  - label: "Init GPU"
-    key: "gpu_init"
+  - label: "init gpu env"
+    key: "init_gpu_env"
     command:
       - "echo $JULIA_DEPOT_PATH"
       - "julia --project -e 'using Pkg; Pkg.instantiate(;verbose=true)"
       - "julia --project -e 'using Pkg; Pkg.precompile()'"
       - "julia --project -e 'using Pkg; Pkg.status()'"
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
+      slurm_gres: "gpu:1"
 
   - wait
 
