--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -413,7 +413,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project test/Ocean/SplitExplicit/test_coriolis.jl "
     agents:
-      config: cpu
+      config: cpu-test
       queue: central
       slurm_ntasks: 1
 
@@ -458,7 +458,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project test/Land/Model/heat_analytic_unit_test.jl "
     agents:
-      config: cpu
+      config: cpu-test
       queue: central
       slurm_ntasks: 1
 
@@ -467,7 +467,7 @@ steps:
     command:
      - "mpiexec julia --color=yes --project test/Atmos/Model/discrete-hydrostatic-balance.jl"
     agents:
-      config: cpu
+      config: cpu-test
       queue: central
       slurm_ntasks: 3
 
@@ -495,7 +495,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project test/Utilities/VariableTemplates/runtests_gpu.jl "
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
@@ -795,7 +795,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project test/Ocean/SplitExplicit/test_coriolis.jl "
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
@@ -975,7 +975,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_single_stack.jl --diagnostics=default --fix-rng-seed"
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
@@ -985,7 +985,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project experiments/AtmosLES/bomex_les.jl --surface-flux=bulk --fix-rng-seed"
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
@@ -1055,7 +1055,7 @@ steps:
     command:
       - "mpiexec julia --color=yes --project test/Land/Model/heat_analytic_unit_test.jl "
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
@@ -1075,7 +1075,7 @@ steps:
     command:
       - "julia --color=yes --project test/runtests_gpu.jl"
     agents:
-      config: gpu
+      config: gpu-test
       queue: central
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
