--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -46,6 +46,15 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "cpu_mpp_test"
+    key: "cpu_mpp_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/mpp_test.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_pseudo1D_advection_diffusion"
     key: "cpu_pseudo1D_advection_diffusion"
     command:
@@ -831,6 +840,16 @@ steps:
     key: "gpu_KM_ice"
     command:
       - "mpiexec julia --color=yes --project test/Atmos/Parameterizations/Microphysics/KM_ice.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_mpp_test"
+    key: "gpu_mpp_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/mpp_test.jl --integration-testing"
     agents:
       config: gpu
       queue: central
