only run docs build / formatter when file/paths change

--- a/.github/workflows/Linux-UnitTests.yml
+++ b/.github/workflows/Linux-UnitTests.yml
@@ -2,6 +2,11 @@ name: Unit Tests
 
 on:
   pull_request:
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - 'Project.toml'
+      - 'Manifest.toml'
 
 jobs:
   test:
