--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -2,6 +2,12 @@ name: Documentation
 
 on:
   pull_request:
+    paths:
+      - 'docs/**'
+      - 'tutorials/**'
+      - 'src/**'
+      - 'Project.toml'
+      - 'Manifest.toml'
 
 jobs:
   docs-build:
