only run docs build / formatter when file/paths change

--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -8,6 +8,12 @@ on:
       - staging
     tags: '*'
   pull_request:
+    paths:
+      - 'docs/**'
+      - 'tutorials/**'
+      - 'src/**'
+      - 'Project.toml'
+      - 'Manifest.toml'
 
 jobs:
   docs-build:
