--- a/.buildkite/docs-pipeline.yml
+++ b/.buildkite/docs-pipeline.yml
@@ -1,17 +1,19 @@
 env:
   OPENBLAS_NUM_THREADS: 1
-  CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
-  CLIMATEMACHINE_SETTINGS_DISABLE_GPU: "true"
-  CLIMATEMACHINE_SETTINGS_DISABLE_CUSTOM_LOGGER: "true"
+  SINGULARITY_CONTAINER: "library://jakebolewski/clima/documenter.sif:1.0.0" 
 
 steps:
   - label: "Build docs"
     command:
-      - "julia -e 'using Pkg; Pkg.instantiate()'"
-      - "julia -e 'using Pkg; Pkg.precompile()'"
-      - "julia --procs=1 docs/make.jl"
+      - "singularity pull ${SINGULARITY_CONTAINER}"
+      - "singularity run ${SINGULARITY_CONTAINER} julia -e 'using Pkg; Pkg.instantiate()'"
+      - "singularity run ${SINGULARITY_CONTAINER} julia -e 'using Pkg; Pkg.precompile()'"
+      - "singularity run ${SINGULARITY_CONTAINER} julia --procs=auto docs/make.jl"
     env:
-      JULIA_PROJECT: "docs/" 
+      JULIA_PROJECT: "docs/"
+      CLIMATEMACHINE_SETTINGS_FIX_RNG_SEED: "true"
+      CLIMATEMACHINE_SETTINGS_DISABLE_GPU: "true"
+      CLIMATEMACHINE_SETTINGS_DISABLE_CUSTOM_LOGGER: "true"
     agents:
       config: cpu
       queue: central
