--- a/.buildkite/docs-pipeline.yml
+++ b/.buildkite/docs-pipeline.yml
@@ -4,10 +4,10 @@ env:
 steps:
   - label: "Build docs"
     command:
-      - "singularity pull ${SINGULARITY_CONTAINER}"
-      - "singularity run -B /data/depot:${JULIA_DEPOT_PATH} ${SINGULARITY_CONTAINER} julia -e 'using Pkg; Pkg.instantiate()'"
-      - "singularity run -B /data/depot:${JULIA_DEPOT_PATH} ${SINGULARITY_CONTAINER} julia -e 'using Pkg; Pkg.precompile()'"
-      - "singularity run -B /data/depot:${JULIA_DEPOT_PATH} ${SINGULARITY_CONTAINER} julia --procs=auto docs/make.jl"
+      - "singularity pull $SINGULARITY_CONTAINER"
+      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.instantiate()'"
+      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.precompile()'"
+      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia --procs=auto docs/make.jl"
     env:
       JULIA_PROJECT: "docs/"
       CLIMATEMACHINE_SETTINGS_DISABLE_GPU: "true"
