--- a/.buildkite/docs-pipeline.yml
+++ b/.buildkite/docs-pipeline.yml
@@ -5,9 +5,10 @@ steps:
   - label: "Build docs"
     command:
       - "singularity pull $SINGULARITY_CONTAINER"
-      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.instantiate()'"
-      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.precompile()'"
-      - "singularity run -B /data/depot:$JULIA_DEPOT_PATH $SINGULARITY_CONTAINER julia --procs=auto docs/make.jl"
+      - "SINGULARITY_BIND='/data/depot:$JULIA_DEPOT_PATH'"
+      - "singularity run $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.instantiate()'"
+      - "singularity run $SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.precompile()'"
+      - "singularity run $SINGULARITY_CONTAINER julia --procs=auto docs/make.jl"
     env:
       JULIA_PROJECT: "docs/"
       CLIMATEMACHINE_SETTINGS_DISABLE_GPU: "true"
