--- a/.buildkite/docs-pipeline.yml
+++ b/.buildkite/docs-pipeline.yml
@@ -4,8 +4,9 @@ env:
 steps:
   - label: "Build docs"
     command:
-      - "singularity pull $$SINGULARITY_CONTAINER"
+      - "mkdir -p $$JULIA_DEPOT_PATH" 
       - "export SINGULARITY_BIND=\"$$JULIA_DEPOT_PATH:/data\""
+      - "singularity pull $$SINGULARITY_CONTAINER"
       - "singularity run $$SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.instantiate()'"
       - "singularity run $$SINGULARITY_CONTAINER julia -e 'using Pkg; Pkg.precompile()'"
       - "singularity run $$SINGULARITY_CONTAINER julia --procs=auto docs/make.jl"
