Prep surface fluxes for gpu
WIP

WIP Deving forwardDiff and NLSolvers, tests failing

Rm NLsolve from deps, try dev NonlinearSolvers.jl

Surface fluxes fully working on GPU

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -590,6 +590,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_surface_fluxes"
+    key: "gpu_surface_fluxes"
+    command:
+      - "mpiexec julia --color=yes --project test/Common/SurfaceFluxes/runtests.jl --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_thermodynamics"
     key: "gpu_thermodynamics"
     command:
