--- a/.github/workflows/Documenter.yaml
+++ b/.github/workflows/Documenter.yaml
@@ -51,6 +51,7 @@ jobs:
         env:
           JULIA_PROJECT: "docs/"
         run: |
+          julia --project -e 'using Pkg; Pkg.instantiate()'
           julia --project=docs/ -e 'using Pkg; Pkg.instantiate()'
           julia --project=docs/ -e 'using Pkg; Pkg.precompile()'
       - name: Build and deploy
