refactor land bc
slightly updated land_bc

heat analytic test works

added in structure to hold tuples of BCs for clarity

added in some documentation

small changes after talking with Simon; propagated to all tests

added in 3d config and test

formatting and tutorials

made sure tutorials ran

removed commented line

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -516,6 +516,15 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "cpu_soil_test_bc_3d"
+    key: "cpu_soil_test_bc_3d"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/test_bc_3d.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
   - label: "gpu_varsindex"
     key: "gpu_varsindex"
     command:
@@ -1360,6 +1369,16 @@ steps:
     key: "gpu_soil_test_bc"
     command:
       - "mpiexec julia --color=yes --project test/Land/Model/test_bc.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_soil_test_bc_3d"
+    key: "gpu_soil_test_bc_3d"
+    command:
+      - "mpiexec julia --color=yes --project test/Land/Model/test_bc_3d.jl "
     agents:
       config: gpu
       queue: central
