add if for dry model
WIP update bomex table

flattened_nt_vals => flattened_tuple

Export additional tendency interface functions

Add DumpTendencies diagnostics group

Dumps all currently available tendencies (sources and first and second
order flux terms) to NetCDF (after interpolation).

Co-authored-by: Charles Kawczynski <kawczynski.charles@gmail.com>

Remove diagnostics collection in CI for some experiments

parent 9971f743e45b666f7f6b9b47dde6d0b296be1f71
author Charles Kawczynski <kawczynski.charles@gmail.com> 1610739732 -0800
committer yairchn <yairchn@caltech.edu> 1612202339 -0800

Add prog-prim conversion for edmf

add face auxiliary state construction

Co-authored-by: Charles Kawczynski <kawczynski.charles@gmail.com>

In DGFV use cell center state as bottom1

Enable EDMF with FVM

update face auxiliary states for geopotential

Do not flatten diagnostics namedtuple, manually add dons fields

Support FVM in NodalStack

Update test/Atmos/EDMF/stable_bl_edmf_fvm.jl

Co-authored-by: Charles Kawczynski <kawczynski.charles@gmail.com>

Add get_z FVM, update Artifacts, + other fixes

adjust mse to new code

Add prog-prim conversion for edmf

add burgers single stack

update reference state in stable_bl_edmf_fvm
use Roe

add burgers single stack

update reference state in stable_bl_edmf_fvm
use Roe

Fix merge conflict

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1583,7 +1583,7 @@ steps:
   - label: "gpu_sbl_les"
     key: "gpu_sbl_les"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/stable_bl_les.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/stable_bl_les.jl --fix-rng-seed"
     agents:
       config: gpu
       queue: central
@@ -1593,7 +1593,7 @@ steps:
   - label: "gpu_cbl_les"
     key: "gpu_cbl_les"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/convective_bl_les.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/convective_bl_les.jl --fix-rng-seed"
     agents:
       config: gpu
       queue: central
@@ -1603,7 +1603,7 @@ steps:
   - label: "gpu_cfsite"
     key: "gpu_cfsite"
     command:
-      - "mpiexec julia --color=yes --project experiments/AtmosLES/cfsite_hadgem2-a_07_amip.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/cfsite_hadgem2-a_07_amip.jl --fix-rng-seed"
     agents:
       config: gpu
       queue: central
@@ -1643,7 +1643,7 @@ steps:
   - label: "gpu_sbl_edmf"
     key: "gpu_sbl_edmf"
     command:
-      - "mpiexec julia --color=yes --project test/Atmos/EDMF/stable_bl_edmf.jl --diagnostics=default --fix-rng-seed"
+      - "mpiexec julia --color=yes --project test/Atmos/EDMF/stable_bl_edmf.jl --fix-rng-seed"
     agents:
       config: gpu
       queue: central
