Move long tests to buildkite

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -138,8 +138,8 @@ steps:
       queue: central
       slurm_ntasks: 5
 
-  - label: "cpu_mpi_sortcolumns"
-    key: "cpu_mpi_sortcolumns"
+  - label: "cpu_mpi_sortcolumns4"
+    key: "cpu_mpi_sortcolumns4"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_sortcolumns.jl "
     agents:
@@ -151,6 +151,15 @@ steps:
     key: "cpu_ode_tests_convergence"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/ODESolvers/ode_tests_convergence.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_ode_tests_basic"
+    key: "cpu_ode_tests_basic"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/ODESolvers/ode_tests_basic.jl "
     agents:
       config: cpu
       queue: central
@@ -178,6 +187,69 @@ steps:
     key: "cpu_vars_test"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/vars_test.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_grad_test"
+    key: "cpu_grad_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/grad_test.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_grad_test_sphere"
+    key: "cpu_grad_test_sphere"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/grad_test_sphere.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_horizontal_integral_test"
+    key: "cpu_horizontal_integral_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/horizontal_integral_test.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_integral_test"
+    key: "cpu_integral_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/integral_test.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_integral_test_sphere"
+    key: "cpu_integral_test_sphere"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/integral_test_sphere.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_custom_filter"
+    key: "cpu_custom_filter"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/custom_filter.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_fv_reconstruction_test"
+    key: "cpu_fv_reconstruction_test"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/fv_reconstruction_test.jl"
     agents:
       config: cpu
       queue: central
@@ -421,6 +493,24 @@ steps:
     key: "cpu_columnwiselu"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/SystemSolvers/columnwiselu.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_cg"
+    key: "cpu_cg"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/SystemSolvers/cg.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_bgmres"
+    key: "cpu_bgmres"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/SystemSolvers/bgmres.jl"
     agents:
       config: cpu
       queue: central
@@ -946,6 +1036,159 @@ steps:
       queue: central
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
+
+  - label: "cpu_courant"
+    key: "cpu_courant"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/courant.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 2
+
+  - label: "cpu_brickmesh"
+    key: "cpu_brickmesh"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/BrickMesh.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_elements"
+    key: "cpu_elements"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/Elements.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_metrics"
+    key: "cpu_metrics"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/Metrics.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_grids"
+    key: "cpu_grids"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/Grids.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_topology"
+    key: "cpu_topology"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/topology.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_grid_integral"
+    key: "cpu_grid_integral"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/grid_integral.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_filter"
+    key: "cpu_filter"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/filter.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_filter_tmar"
+    key: "cpu_filter_tmar"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/filter_TMAR.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
+
+  - label: "cpu_mpi_centroid"
+    key: "cpu_mpi_centroid"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_centroid.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_mpi_connect_ell"
+    key: "cpu_mpi_connect_ell"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_connect_ell.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 2
+
+  - label: "cpu_mpi_connect"
+    key: "cpu_mpi_connect"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_connect.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_mpi_connect_stacked"
+    key: "cpu_mpi_connect_stacked"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_connect_stacked.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_mpi_connect_stacked_3d"
+    key: "cpu_mpi_connect_stacked_3d"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_connect_stacked_3d.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 2
+
+  - label: "cpu_mpi_getpartition3"
+    key: "cpu_mpi_getpartition3"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_getpartition.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_mpi_partition"
+    key: "cpu_mpi_partition"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_partition.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+  - label: "cpu_mpi_sortcolumns"
+    key: "cpu_mpi_sortcolumns"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_sortcolumns.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 1
 
   - label: "gpu_interpolation"
     key: "gpu_interpolation"
