--- a/.github/workflows/Coverage.yaml
+++ b/.github/workflows/Coverage.yaml
@@ -16,21 +16,17 @@ jobs:
     - name: Set up Julia
       uses: julia-actions/setup-julia@latest
       with:
-        version: 1.5.2
-
+        version: 1.5.4
+   
     - name: Test with coverage
-      env:
-        JULIA_PROJECT: "@."
       run: |
-        julia --project=@. -e 'using Pkg; Pkg.instantiate()'
-        julia --project=@. -e 'using Pkg; Pkg.test(coverage=true)'
+        julia --project -e 'using Pkg; Pkg.instantiate()'
+        julia --project -e 'using Pkg; Pkg.test(coverage=true)'
 
     - name: Generate coverage file
-      env:
-        JULIA_PROJECT: "@."
-      run: julia --project=@. -e 'using Pkg; Pkg.add("Coverage");
-                                  using Coverage;
-                                  LCOV.writefile("coverage-lcov.info", Codecov.process_folder())'
+      run: julia --project -e 'using Pkg; Pkg.add("Coverage");
+                               using Coverage;
+                               LCOV.writefile("coverage-lcov.info", Codecov.process_folder())'
       if: success()
 
     - name: Submit coverage
@@ -38,4 +34,3 @@ jobs:
       with:
         token: ${{secrets.CODECOV_TOKEN}}
       if: success()
-
